[project]
name = "strip-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib==1.5.2",
    "opencv-python==4.11.0.86",
    "tifffile==2025.10.16",
    "pillow==12.0.0",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "seaborn==0.13.2",
    "scikit-learn==1.7.2",
    "fastapi==0.121.1",
    "pydantic==2.12.4",
    "torch==2.8.0+cu129",
    "torchvision==0.23.0+cu129",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "fsspec==2025.10.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "mpmath==1.3.0",
    "networkx==3.5",
    "packaging==25.0",
    "pydantic-core==2.41.5",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scipy==1.16.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.49.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
torchvision = { index = "pytorch-cu129" }

[[tool.uv.index]]
# Optional name for the index.
name = "pytorch-cu128"
# Required URL for the index.
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
# Optional name for the index.
name = "pytorch-cu129"
# Required URL for the index.
url = "https://download.pytorch.org/whl/cu129"
explicit = true
